# gcontext

./: .gitignore  README.md  pyproject.toml
case-studies/maat-support/: README.md  llms.txt
case-studies/maat-support/firestore/: info.md  llms.txt  module.yaml
case-studies/maat-support/stripe/: info.md  llms.txt  module.yaml
case-studies/maat-support/support/: info.md  llms.txt
case-studies/maat-support/support/logs/: 2026-03.md  llms.txt
case-studies/maat-support/support/runbooks/: add-attendance-credits.md  change-membership-plan.md  export-member-roster.md  fix-plan-sync.md  gdpr-data-export.md  llms.txt  member-attendance-report.md  refund-payment.md  swap-sibling-membership.md  update-belt-requirements.md
core/: __init__.py  kind_specs.py  llms_gen.py  manifest.py  schemas.py
core/templates/: module_features.md  principles.md  system.md
demo/: claude-sim.py  first-session.html  first-session.json  gcontext-claude-demo.tape  gcontext-real-demo.tape  replay-session.py
eic/: cli.py
eic/data/: secrets.md
eic/data/example/: info.md  llms.txt
examples/: first-integration.md
gcontext/: cli.py
gcontext/data/: secrets.md  system.md
gcontext/data/example/: info.md
gcontext/data/seed/: info.md  llms.txt  module.yaml
tests/: conftest.py  test_cli_journey.py  test_packaging.py
