[project]
name = "gcontext-ai"
version = "0.2.2"
description = "gcontext — file-based knowledge protocol for AI agents"
requires-python = ">=3.11"
dependencies = ["pydantic", "pyyaml", "simple-term-menu"]
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://gcontext.ai"
Repository = "https://github.com/bleak-ai/gcontext"

[project.scripts]
gcontext = "gcontext.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "gcontext"]

[tool.setuptools.package-data]
"core" = ["templates/*.md"]
"gcontext" = ["data/**/*"]
