[project]
name = "gcontext-ai"
version = "0.2.4"
description = "gcontext — file-based knowledge protocol for AI agents"
requires-python = ">=3.11"
dependencies = ["pydantic", "pyyaml", "simple-term-menu"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://gcontext.ai"
Repository = "https://github.com/bleak-ai/gcontext"

[project.scripts]
gcontext = "gcontext.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "gcontext"]

[tool.setuptools.package-data]
"core" = ["templates/*.md"]
"gcontext" = ["data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest"]
